fix: light dark mode first phase

--- a/unikloh/src/app/globals.css
+++ b/unikloh/src/app/globals.css
@@ -19,6 +19,23 @@
   }
 } */
 
+/* Default: light mode */
+:root {
+  --background: #fa1919;
+  --foreground: #000000;
+}
+
+/* Dark mode */
+.dark {
+  --background: #000000;
+  --foreground: #ffffff;
+}
+
+.headfootdark{
+  --background: #7c1a1a;
+  --foreground: #ffffff;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
